# FastAPI-Launchpad

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  run.ps1
.github/: PULL_REQUEST_TEMPLATE.md  TOPICS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: my-agent.agent.md
.github/workflows/: pr-lint.yml
alembic/: env.py
app/: config.py  database.py  factory.py  main.py
app/core/: dependencies.py  security.py
app/models/: base.py
app/schemas/: __init__.py  common.py
app/utils/: logger.py
docs/: CONTRIBUTING.md  SETUP.md  configuration.md  deployment.md  getting-started.md  index.md
scripts/: dev.sh
tests/: conftest.py  test_main.py  test_security.py
